--- a/CP1-TempoReuniao/index.html
+++ b/CP1-TempoReuniao/index.html
@@ -15,17 +15,17 @@
 <div>
     <span><strong>Início:</strong></span>
     <span>Horas</span>
-    <input style="width:30px" id="inicHora" type="text">
+    <input style="width:40px" id="inicHora" type="number">
     <span>Minutos</span>
-    <input style="width:30px" id="inicMin" type="text">
+    <input style="width:40px" id="inicMin" type="number">
 </div>
 
 <div>
     <span><strong>Término:</strong></span>
     <span>Horas</span>
-    <input style="width:30px" id="finalHora" type="text">
+    <input style="width:40px" id="finalHora" type="number">
     <span>Minutos</span>
-    <input style="width:30px" id="finalMin" type="text">
+    <input style="width:40px" id="finalMin" type="number">
 </div>
 <div style="margin-top:10px">
     <button onclick="calcular()">Calcular duração</button>
